--- a/neo_quant_test.ipynb
+++ b/neo_quant_test.ipynb
@@ -606,6 +606,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# firm_code = 'A005930'\n",
     "fs_url = 'https://comp.fnguide.com/SVO2/asp/SVD_Finance.asp?pGB=1&cID=&MenuYn=Y&ReportGB=D&NewMenuID=103&stkGb=701&gicode=' + firm_code\n",
@@ -819,6 +826,33 @@
     "price_path = r'data/price_data.xlsx'\n",
     "price_df = pd.read_excel(price_path)\n",
     "price_df = price_df.set_index(price_df.columns[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "last_price = price_df.iloc[-1]\n",
+    "first_price = price_df['2016/10'].iloc[0]\n",
+    "price_diff_df = pd.DataFrame({last_price.name:last_price, first_price.name:first_price})\n",
+    "price_diff_df.index = 'A' + price_diff_df.index\n",
+    "price_diff_df['diff'] = price_diff_df[last_price.name] - price_diff_df[first_price.name]\n",
+    "price_diff_df = price_diff_df[price_diff_df[last_price.name] > 5000]\n",
+    "price_diff_df = price_diff_df[price_diff_df['diff'] > 0]\n",
+    "# price_diff_df['ratio'] = price_diff_df['diff'] / price_diff_df[first_price.name]\n",
+    "price_diff_df['ratio'] = price_diff_df[last_price.name] / price_diff_df[first_price.name]\n",
+    "price_diff_df = price_diff_df.sort_values(by='ratio', ascending=False)\n",
+    "# price_diff_df = add_company_info(price_diff_df, companies)\n",
+    "# price_diff_df = get_kospi_list(price_diff_df)\n",
+    "price_diff_df['fs_info'] = price_diff_df.index\n",
+    "price_diff_df['fs_info'] = price_diff_df['fs_info'].apply(lambda x: '<a href=\"https://comp.fnguide.com/SVO2/asp/SVD_Finance.asp?pGB=1&cID=&MenuYn=Y&ReportGB=D&NewMenuID=103&stkGb=701&gicode={0}\" target=\"_blank\">fs</a>'.format(x))\n",
+    "price_diff_df['fr_info'] = price_diff_df.index\n",
+    "price_diff_df['fr_info'] = price_diff_df['fr_info'].apply(lambda x: '<a href=\"https://comp.fnguide.com/SVO2/asp/SVD_FinanceRatio.asp?pGB=1&cID=&MenuYn=Y&ReportGB=D&NewMenuID=104&stkGb=701&gicode={0}\" target=\"_blank\">fr</a>'.format(x))\n",
+    "price_diff_df['iv_info'] = price_diff_df.index\n",
+    "price_diff_df['iv_info'] = price_diff_df['iv_info'].apply(lambda x: '<a href=\"https://comp.fnguide.com/SVO2/asp/SVD_Invest.asp?pGB=1&cID=&MenuYn=Y&ReportGB=D&NewMenuID=105&stkGb=701&gicode={0}\" target=\"_blank\">iv</a>'.format(x))\n",
+    "return HTML(price_diff_df.to_html(escape=False))\n"
    ]
   }
  ],
