--- a/neo_quant_test2.ipynb
+++ b/neo_quant_test2.ipynb
@@ -2,7 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.display.max_rows = 60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies, prices, fs_df, fr_df, iv_df = load_all_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +40,9 @@
     "plt.rcParams['axes.unicode_minus'] = False\n",
     "pd.options.display.max_rows = 60\n",
     "%matplotlib inline\n",
+    "\n",
+    "my_portfolio = ['동국제강', '포스코','현대건설','GS건설','한국조선해양','OCI','미래에셋대우','삼성증권','삼성중공업','키움증권','LG화학']\n",
+    "my_portfolio_code_list = ['A001230','A005490','A000720','A006360','A009540','A010060','A006800','A016360','A010140','A039490','A051910']\n",
     "\n",
     "def make_code(x):\n",
     "    x = str(x)\n",
@@ -81,6 +102,7 @@
     "    price_path = r'data/price_data.xlsx'\n",
     "    price_df = pd.read_excel(price_path)\n",
     "    price_df = price_df.set_index(price_df.columns[0])\n",
+    "    price_df.columns = 'A' + price_df.columns \n",
     "    return price_df\n",
     "\n",
     "def get_fs_data():\n",
@@ -133,25 +155,14 @@
     "def get_company_code(name, company_df):\n",
     "    return company_df[company_df['기업명']==name].index[0]\n",
     "\n",
-    "# def show_chart(price_df, stock_name, year_duration):\n",
-    "#     end_date = price_df.iloc[-1].name\n",
-    "# #     end_date = datetime.datetime.fromtimestamp(end_date)\n",
-    "#     start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
-    "#     code = get_company_code(stock_name)\n",
-    "#     initial_money = 100000000\n",
-    "#     st_backtest = backtest_with_code_list(price_df, [code], start_date, end_date, initial_money)\n",
-    "#     plt.figure(figsize=(10, 6))\n",
-    "#     st_backtest['총변화율'].plot()\n",
-    "#     plt.show()\n",
-    "\n",
-    "\n",
-    "def get_company_code_list(company_name, company_df):\n",
+    "def get_company_code_list(company_name_list, company_df):\n",
     "    code_list = []\n",
-    "    for num, name in enumerate(company_df['기업명']):\n",
-    "        if company_name in name:\n",
-    "            code_list.append({'code':company_df.index[num], 'name':name})\n",
+    "    for company_name in company_name_list:\n",
+    "        for num, name in enumerate(company_df['기업명']):\n",
+    "            if company_name in name:\n",
+    "                code_list.append({'code':company_df.index[num], 'name':name})\n",
     "    return code_list\n",
-    "            \n",
+    "\n",
     "def show_chart(company_name, company_df, price_df, year_duration=1):\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
@@ -161,7 +172,7 @@
     "        return\n",
     "    code = company_list[0]['code']\n",
     "    name = company_list[0]['name']\n",
-    "    code = code.replace('A','')\n",
+    "#     code = code.replace('A','')\n",
     "    strategy_price = price_df[code][start_date:end_date]\n",
     "    strategy_df = pd.DataFrame({'price':strategy_price})\n",
     "    plt.figure(figsize=(10, 6))\n",
@@ -169,6 +180,45 @@
     "    plt.legend()\n",
     "    plt.show()          \n",
     "\n",
+    "def show_detail_chart(company_name, company_df, price_df, year_duration=1):\n",
+    "    end_date = price_df.iloc[-1].name\n",
+    "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
+    "    company_list = get_company_code_list(company_name, company_df)\n",
+    "    if len(company_list) == 0:\n",
+    "        print('no company with name' + company_name)\n",
+    "        return\n",
+    "    code = company_list[0]['code']\n",
+    "    name = company_list[0]['name']\n",
+    "#     code = code.replace('A','')\n",
+    "    strategy_price = price_df[code][start_date:end_date]\n",
+    "    strategy_df = pd.DataFrame({'price':strategy_price})\n",
+    "    strategy_df\n",
+    "    ma5 = strategy_df['price'].rolling(window=5).mean()\n",
+    "    strategy_df['ma5'] = ma5\n",
+    "    ma10 = strategy_df['price'].rolling(window=10).mean()\n",
+    "    strategy_df['ma10'] = ma10\n",
+    "    ma20 = strategy_df['price'].rolling(window=20).mean()\n",
+    "    strategy_df['ma20'] = ma20\n",
+    "    ma60 = strategy_df['price'].rolling(window=60).mean()\n",
+    "    strategy_df['ma60'] = ma60\n",
+    "    ma120 = strategy_df['price'].rolling(window=120).mean()\n",
+    "    strategy_df['ma120'] = ma120\n",
+    "    plt.figure(figsize=(20, 12))\n",
+    "    # strategy_df['price'].plot(label=name)\n",
+    "    plt.plot(strategy_df.index, strategy_df['price'], color='darkblue',linewidth=3.0)\n",
+    "    plt.plot(strategy_df.index, strategy_df['ma5'], color='red', label='ma5')\n",
+    "    plt.plot(strategy_df.index, strategy_df['ma10'], color='blue', label='ma10')\n",
+    "    plt.plot(strategy_df.index, strategy_df['ma20'], color='green', label='ma20')\n",
+    "    plt.plot(strategy_df.index, strategy_df['ma60'], color='cyan', label='ma60')\n",
+    "    plt.plot(strategy_df.index, strategy_df['ma120'], color='yellow', label='ma120')\n",
+    "    plt.title(name)\n",
+    "    plt.xlabel(\"duration\")\n",
+    "    plt.ylabel(\"price\")\n",
+    "    plt.legend(loc='upper right')\n",
+    "    plt.grid()\n",
+    "    plt.show() \n",
+    "    \n",
+    "    \n",
     "def get_maximum_earning_rate(price_df, company_df, year_duration=1, min_price=0, type='all'):\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
@@ -177,7 +227,7 @@
     "    last_price = strategy_price.iloc[-1]\n",
     "    first_price = strategy_price.iloc[0]\n",
     "    price_diff_df = pd.DataFrame({first_price.name:first_price, last_price.name:last_price})\n",
-    "    price_diff_df.index = 'A' + price_diff_df.index\n",
+    "#     price_diff_df.index = 'A' + price_diff_df.index\n",
     "    price_diff_df['diff'] = price_diff_df[last_price.name] - price_diff_df[first_price.name]\n",
     "    price_diff_df = price_diff_df[price_diff_df[last_price.name] > 5000]\n",
     "    price_diff_df = price_diff_df[price_diff_df['diff'] > 0]\n",
@@ -199,7 +249,14 @@
     "#     price_diff_df['iv_info'] = price_diff_df['iv_info'].apply(lambda x: '<a href=\"https://comp.fnguide.com/SVO2/asp/SVD_Invest.asp?pGB=1&cID=&MenuYn=Y&ReportGB=D&NewMenuID=105&stkGb=701&gicode={0}\" target=\"_blank\">iv</a>'.format(x))\n",
     "#     return HTML(price_diff_df.to_html(escape=False))\n",
     "\n",
-    "\n",
+    "def show_pf_earning_rate(code_list, price_df, year_duration=1, initial_monehy=100000000):\n",
+    "    end_date = price_df.iloc[-1].name\n",
+    "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
+    "    st_backtest = backtest_with_code_list(price_df, code_list, start_date, end_date, initial_money)\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    st_backtest['총변화율'].plot()\n",
+    "    plt.show()\n",
+    "    \n",
     "def show_company_info(company_code_list, company_df):\n",
     "    firm_df = company_df.loc[company_code_list]\n",
     "    firm_df['fs_info'] = firm_df.index\n",
@@ -210,7 +267,7 @@
     "    firm_df['iv_info'] = firm_df['iv_info'].apply(lambda x: '<a href=\"https://comp.fnguide.com/SVO2/asp/SVD_Invest.asp?pGB=1&cID=&MenuYn=Y&ReportGB=D&NewMenuID=105&stkGb=701&gicode={0}\" target=\"_blank\">iv</a>'.format(x))\n",
     "    return HTML(firm_df.to_html(escape=False))\n",
     "    \n",
-    "def show_company_info_with_name(firm_name, company_df):\n",
+    "def show_company_info_from_name(firm_name, company_df):\n",
     "    company_list = get_company_code_list(firm_name, company_df)\n",
     "    if len(company_list) == 0:\n",
     "        print('no company with name' + company_name)\n",
@@ -227,7 +284,7 @@
     "        return \"No Company with name : \" + firm_name\n",
     "    name = code_list[0]['name']\n",
     "    code = code_list[0]['code']\n",
-    "    code = code.replace('A','')\n",
+    "#     code = code.replace('A','')\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
     "    strategy_price = price_df[code][start_date:end_date]\n",
@@ -450,7 +507,8 @@
     "\n",
     "    code_list = []\n",
     "    for code in strategy_df.index:\n",
-    "        code_list.append(code.replace('A',''))\n",
+    "#         code_list.append(code.replace('A',''))\n",
+    "        code_list.append(code)\n",
     "\n",
     "    strategy_price = price_df[code_list][start_date:end_date]\n",
     "\n",
@@ -478,7 +536,8 @@
     "\n",
     "    code_list = []\n",
     "    for code in code_list_to_test:\n",
-    "        code_list.append(code.replace('A',''))\n",
+    "#         code_list.append(code.replace('A',''))\n",
+    "        code_list.append(code)\n",
     "\n",
     "    strategy_price = price_df[code_list][start_date:end_date]\n",
     "\n",
@@ -614,36 +673,6 @@
     "\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "companies, prices, fs_df, fr_df, iv_df = load_all_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.options.display.max_rows = 60"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kospi = get_kospi_list(companies)\n",
-    "kosdaq = get_kosdaq_list(companies)\n",
-    "len(kospi)\n",
-    "len(kosdaq)"
    ]
   }
  ],
