--- a/neo_quant_test2.ipynb
+++ b/neo_quant_test2.ipynb
@@ -6,12 +6,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import requests\n",
+    "import bs4\n",
+    "import time\n",
+    "import datetime\n",
+    "import matplotlib.pyplot as plt\n",
+    "from dateutil import parser\n",
+    "from matplotlib import font_manager, rc\n",
+    "from IPython.display import HTML\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "pd.options.display.max_rows = 60"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +183,9 @@
     "                code_list.append({'code':company_df.index[num], 'name':name})\n",
     "    return code_list\n",
     "\n",
+    "def get_company_name(company_code, company_df):\n",
+    "    return company_df.loc[company_code]['기업명']\n",
+    "\n",
     "def show_chart(company_name, company_df, price_df, year_duration=1):\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
@@ -180,6 +203,19 @@
     "    plt.legend()\n",
     "    plt.show()          \n",
     "\n",
+    "def show_multi_chart(company_code_list, price_df, company_df, year_duration=1):\n",
+    "    end_date = price_df.iloc[-1].name\n",
+    "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
+    "    strategy_price = price_df[company_code_list][start_date:end_date]\n",
+    "    num_row = int((len(company_code_list)-1)/2)+1\n",
+    "    plt.figure(figsize=(10, num_row*5))\n",
+    "    for i, code in enumerate(company_code_list):\n",
+    "        ax = plt.subplot(num_row, 4, i+1)\n",
+    "        name = get_company_name(code, company_df)\n",
+    "        ax.title.set_text(name)\n",
+    "        ax.plot(strategy_price.index, strategy_price[code])\n",
+    "    plt.show()\n",
+    "    \n",
     "def show_detail_chart(company_name, company_df, price_df, year_duration=1):\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
@@ -674,6 +710,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
