--- a/neo_quant.ipynb
+++ b/neo_quant.ipynb
@@ -504,6 +504,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 데이터 업데이트"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_fs_data(company_df, origin_fs_df):\n",
+    "    fs_merge = origin_fs_df\n",
+    "    for num, code in enumerate(company_df.index):\n",
+    "        try:\n",
+    "            print(num, code)\n",
+    "            time.sleep(1)\n",
+    "            try:\n",
+    "                fs_df = make_fs_dataframe(code)\n",
+    "            except requests.exceptions.Timeout:\n",
+    "                time.sleep(60)\n",
+    "                fs_df = make_fs_dataframe(code)\n",
+    "            fs_df_changed = change_df(code, fs_df)\n",
+    "            fs_df_origin = pd.DataFrame({code:fs_merge.loc[code]}).T\n",
+    "            \n",
+    "            fs_temp = pd.concat([fs_df_origin, fs_df_changed], axis=1)\n",
+    "            fs_temp = fs_temp.loc[:,~fs_temp.columns.duplicated(keep='last')]\n",
+    "            fs_merge = fs_merge.drop(code)\n",
+    "            fs_merge = pd.concat([fs_merge, fs_temp])\n",
+    "            \n",
+    "        except ValueError:\n",
+    "            continue\n",
+    "        except KeyError:\n",
+    "            continue\n",
+    "    return fs_merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs_merge = update_fs_data(companies, fs_df)\n",
+    "\n",
+    "total_fs = fs_merge\n",
+    "use_year = ['2016/12', '2017/12', '2018/12', '2019/06']\n",
+    "for num, year in enumerate(use_year):\n",
+    "    temp_total_fs = total_fs[year]\n",
+    "    temp_total_fs.columns = [[year] * len(temp_total_fs.columns), temp_total_fs.columns]\n",
+    "    if num == 0:\n",
+    "        total_fs_year = temp_total_fs\n",
+    "    else:\n",
+    "        total_fs_year = pd.merge(total_fs_year, temp_total_fs, left_index=True, right_index=True, how='outer')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 재무비율저장"
    ]
   },
@@ -4583,6 +4641,59 @@
     "\n",
     "total_price.index = pd.to_datetime(total_price.index)\n",
     "total_price.to_excel(r'data/price_data.xlsx')        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 가격정보 업데이트"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_origin_price_df(origin_price_df, code, count):\n",
+    "    origin_prices = origin_price_df\n",
+    "    price_df = make_price_dataframe(code, 'day', count)\n",
+    "    price_df.index = pd.to_datetime(price_df.index)\n",
+    "    price_df[code] = price_df[code].astype(float)\n",
+    "    price_df_origin = pd.DataFrame({code:origin_prices[code]}) \n",
+    "    new_price_df = pd.concat([price_df_origin, price_df])\n",
+    "    new_price_df = new_price_df.loc[~new_price_df.index.duplicated(keep='last')]\n",
+    "    origin_prices = origin_prices.drop(code, axis=1)\n",
+    "    origin_prices = pd.merge(origin_prices, new_price_df, left_index=True, right_index=True, how='outer')\n",
+    "    return origin_prices\n",
+    "    \n",
+    "def update_prices(company_df, origin_price_df, count):\n",
+    "    origin_prices = origin_price_df\n",
+    "    for num, code in enumerate(company_df.index):\n",
+    "        try:\n",
+    "            print(num, code)\n",
+    "            time.sleep(1)\n",
+    "            try:\n",
+    "                origin_prices = update_origin_price_df(origin_prices, code, count)\n",
+    "            except requests.exceptions.Timeout:\n",
+    "                time.sleep(60)\n",
+    "                origin_prices = update_origin_price_df(origin_prices, code, count)\n",
+    "        except ValueError:\n",
+    "            continue\n",
+    "        except KeyError:\n",
+    "            continue\n",
+    "    return origin_prices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prices_update = update_prices(companies, prices, '10') \n",
+    "# prices_update.merge(prices,indicator = True, left_index=True, right_index=True, how='outer').loc[lambda x : x['_merge']!='both']"
    ]
   }
  ],
