--- a/neo_quant_test6.ipynb
+++ b/neo_quant_test6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,35 @@
     "\n",
     "my_portfolio = ['동국제강', '포스코','현대건설','GS건설','한국조선해양','OCI','미래에셋대우','삼성증권','삼성중공업','키움증권','LG화학']\n",
     "my_portfolio_code_list = ['A001230','A005490','A000720','A006360','A009540','A010060','A006800','A016360','A010140','A039490','A051910']\n",
+    "\n",
+    "# default loading\n",
+    "companies, prices, fs_df, fr_df, iv_df = load_all_data()\n",
+    "\n",
+    "\n",
+    "def show_earning_rate(company_code_list, year_duration=1):\n",
+    "    return _show_earning_rate(company_code_list, companies, prices, year_duration)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "def make_code(x):\n",
     "    x = str(x)\n",
@@ -106,7 +135,7 @@
     "    fr_df = get_fr_data()\n",
     "    iv_df = get_invest_data()\n",
     "    return companies, prices, fs_df, fr_df, iv_df\n",
-    "    \n",
+    "\n",
     "# 액면가 1000원 이상 회사 리스트 가져와서 코드앞에 A 붙이기\n",
     "# companies = get_company_info(1000)\n",
     "# companies = apply_a_type_code(companies)\n",
@@ -138,7 +167,10 @@
     "    return company_df[company_df['기업명']==name].index[0]\n",
     "\n",
     "# str 이나 list 를 전달한다.\n",
-    "def get_company_code_list(company_name_list, company_df):\n",
+    "def get_company_code_list(company_name_list):\n",
+    "    return _get_company_code_list(company_name_list, companies)\n",
+    "\n",
+    "def _get_company_code_list(company_name_list, company_df):\n",
     "    code_list = []\n",
     "    if isinstance(company_name_list, str):\n",
     "        company_name_list = [company_name_list]\n",
@@ -281,10 +313,7 @@
     "        code_list.append(company['code'])\n",
     "    return show_company_info(code_list, companies)\n",
     "\n",
-    "def get_earning_rate(company_code_list, year_duration=1):\n",
-    "    return _get_earning_rate(company_code_list, companies, prices, year_duration)\n",
-    "    \n",
-    "def _get_earning_rate(company_code_list, company_df, price_df, year_duration=1):\n",
+    "def _show_earning_rate(company_code_list, company_df, price_df, year_duration=1):\n",
     "    company_selected = companies.loc[my_portfolio_code_list]\n",
     "\n",
     "    end_date = price_df.iloc[-1].name\n",
@@ -778,26 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.set_option('display.max_columns', 500)\n",
-    "pd.set_option('display.width', 1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "companies, prices, fs_df, fr_df, iv_df = load_all_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -969,22 +979,36 @@
        "</div>"
       ],
       "text/plain": [
-       "            기업명   구분    업종코드           업종  액면가(원)   상장주식수(주)         자본금(원) profit\n",
-       "종목코드                                                                              \n",
-       "A001230  동국제강    코스피  32401   1차 철강 제조업    5000    95432737   589228035000   -16 %\n",
-       "A005490  포스코     코스피  32401   1차 철강 제조업    5000    87186835   482403125000   -12 %\n",
-       "A000720  현대건설    코스피  64102   토목 건설업       5000    111355765  557273105000   -17 %\n",
-       "A006360  GS건설    코스피  64101   건물 건설업       5000    79924368   399621840000   -37 %\n",
-       "A009540  한국조선해양  코스피  33101   선박 및 보트 건조업  5000    70773116   353865580000   0 %  \n",
-       "A010060  OCI     코스피  32001   기초 화학물질 제조업  5000    23849371   127246855000   -30 %\n",
-       "A006800  미래에셋대우  코스피  116601  금융 지원 서비스업   5000    658316408  4101960790000  2 %  \n",
-       "A016360  삼성증권    코스피  116601  금융 지원 서비스업   5000    89300000   458478080000   20 % \n",
-       "A010140  삼성중공업   코스피  33101   선박 및 보트 건조업  5000    630000000  3150574225000  9 %  \n",
-       "A039490  키움증권    코스피  116601  금융 지원 서비스업   5000    22099740   110498700000   -10 %\n",
-       "A051910  LG화학    코스피  32001   기초 화학물질 제조업  5000    70592343   391405715000   -1 % "
+       "            기업명   구분    업종코드           업종  액면가(원)   상장주식수(주)         자본금(원)  \\\n",
+       "종목코드                                                                          \n",
+       "A001230  동국제강    코스피  32401   1차 철강 제조업    5000    95432737   589228035000    \n",
+       "A005490  포스코     코스피  32401   1차 철강 제조업    5000    87186835   482403125000    \n",
+       "A000720  현대건설    코스피  64102   토목 건설업       5000    111355765  557273105000    \n",
+       "A006360  GS건설    코스피  64101   건물 건설업       5000    79924368   399621840000    \n",
+       "A009540  한국조선해양  코스피  33101   선박 및 보트 건조업  5000    70773116   353865580000    \n",
+       "A010060  OCI     코스피  32001   기초 화학물질 제조업  5000    23849371   127246855000    \n",
+       "A006800  미래에셋대우  코스피  116601  금융 지원 서비스업   5000    658316408  4101960790000   \n",
+       "A016360  삼성증권    코스피  116601  금융 지원 서비스업   5000    89300000   458478080000    \n",
+       "A010140  삼성중공업   코스피  33101   선박 및 보트 건조업  5000    630000000  3150574225000   \n",
+       "A039490  키움증권    코스피  116601  금융 지원 서비스업   5000    22099740   110498700000    \n",
+       "A051910  LG화학    코스피  32001   기초 화학물질 제조업  5000    70592343   391405715000    \n",
+       "\n",
+       "        profit  \n",
+       "종목코드            \n",
+       "A001230  -16 %  \n",
+       "A005490  -12 %  \n",
+       "A000720  -17 %  \n",
+       "A006360  -37 %  \n",
+       "A009540  0 %    \n",
+       "A010060  -30 %  \n",
+       "A006800  2 %    \n",
+       "A016360  20 %   \n",
+       "A010140  9 %    \n",
+       "A039490  -10 %  \n",
+       "A051910  -1 %   "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
