--- a/neo_quant_test6.ipynb
+++ b/neo_quant_test6.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "!open ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load neo_quant_backbone.py\n",
+    "# !open .\n",
     "# %load neo_quant.py\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -17,41 +28,11 @@
     "from dateutil import parser\n",
     "from matplotlib import font_manager, rc\n",
     "from IPython.display import HTML\n",
-    "pd.set_option('display.max_colwidth', -1)\n",
-    "rc('font', family='AppleGothic')\n",
-    "plt.rcParams['axes.unicode_minus'] = False\n",
-    "pd.options.display.max_rows = 60\n",
-    "%matplotlib inline\n",
-    "\n",
-    "my_portfolio = ['동국제강', '포스코','현대건설','GS건설','한국조선해양','OCI','미래에셋대우','삼성증권','삼성중공업','키움증권','LG화학']\n",
-    "my_portfolio_code_list = ['A001230','A005490','A000720','A006360','A009540','A010060','A006800','A016360','A010140','A039490','A051910']\n",
-    "\n",
-    "# default loading\n",
-    "companies, prices, fs_df, fr_df, iv_df = load_all_data()\n",
-    "\n",
-    "\n",
-    "def show_earning_rate(company_code_list, year_duration=1):\n",
-    "    return _show_earning_rate(company_code_list, companies, prices, year_duration)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "# pd.set_option('display.max_colwidth', -1)\n",
+    "# rc('font', family='AppleGothic')\n",
+    "# plt.rcParams['axes.unicode_minus'] = False\n",
+    "# pd.options.display.max_rows = 60\n",
+    "# %matplotlib inline\n",
     "\n",
     "\n",
     "\n",
@@ -167,9 +148,6 @@
     "    return company_df[company_df['기업명']==name].index[0]\n",
     "\n",
     "# str 이나 list 를 전달한다.\n",
-    "def get_company_code_list(company_name_list):\n",
-    "    return _get_company_code_list(company_name_list, companies)\n",
-    "\n",
     "def _get_company_code_list(company_name_list, company_df):\n",
     "    code_list = []\n",
     "    if isinstance(company_name_list, str):\n",
@@ -184,10 +162,10 @@
     "    return company_df.loc[company_code]['기업명']\n",
     "\n",
     "# company_name 은 list 형태로 전달\n",
-    "def show_chart(company_name, company_df, price_df, year_duration=1):\n",
+    "def _show_chart(company_name, company_df, price_df, year_duration=1):\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
-    "    company_list = get_company_code_list(company_name, company_df)\n",
+    "    company_list = _get_company_code_list(company_name, company_df)\n",
     "    if len(company_list) == 0:\n",
     "        print('no company with name' + company_name)\n",
     "        return\n",
@@ -314,7 +292,7 @@
     "    return show_company_info(code_list, companies)\n",
     "\n",
     "def _show_earning_rate(company_code_list, company_df, price_df, year_duration=1):\n",
-    "    company_selected = companies.loc[my_portfolio_code_list]\n",
+    "    company_selected = companies.loc[company_code_list]\n",
     "\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
@@ -329,8 +307,8 @@
     "    company_selected['profit'] = company_selected['profit'].astype(str) + ' %'\n",
     "    return company_selected\n",
     "\n",
-    "def get_earning_rate_by_name(firm_name, company_df, price_df, year_duration=1):\n",
-    "    company_list = get_company_code_list(firm_name, company_df)\n",
+    "def _show_earning_rate_by_name(firm_name, company_df, price_df, year_duration=1):\n",
+    "    company_list = _get_company_code_list(firm_name, company_df)\n",
     "    if len(company_list) == 0:\n",
     "        return \"No Company with name : \" + firm_name\n",
     "    \n",
@@ -338,7 +316,7 @@
     "    for company in company_list:\n",
     "        code_list.append(company['code'])\n",
     "\n",
-    "    return get_earning_rate(code_list, company_df, price_df, year_duration)\n",
+    "    return _show_earning_rate(code_list, company_df, price_df, year_duration)\n",
     "\n",
     "\n",
     "def get_vaild_code_from_price_df(code_list, price_df):\n",
@@ -348,7 +326,7 @@
     "            new_code_list.append(code)\n",
     "    return new_code_list        \n",
     "\n",
-    "def show_business_trend(company_df, price_df, year_duration=1):\n",
+    "def _show_business_trend(company_df, price_df, year_duration=1):\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
     "\n",
@@ -807,214 +785,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>기업명</th>\n",
-       "      <th>구분</th>\n",
-       "      <th>업종코드</th>\n",
-       "      <th>업종</th>\n",
-       "      <th>액면가(원)</th>\n",
-       "      <th>상장주식수(주)</th>\n",
-       "      <th>자본금(원)</th>\n",
-       "      <th>profit</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>종목코드</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>A001230</th>\n",
-       "      <td>동국제강</td>\n",
-       "      <td>코스피</td>\n",
-       "      <td>32401</td>\n",
-       "      <td>1차 철강 제조업</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>95432737</td>\n",
-       "      <td>589228035000</td>\n",
-       "      <td>-16 %</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A005490</th>\n",
-       "      <td>포스코</td>\n",
-       "      <td>코스피</td>\n",
-       "      <td>32401</td>\n",
-       "      <td>1차 철강 제조업</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>87186835</td>\n",
-       "      <td>482403125000</td>\n",
-       "      <td>-12 %</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A000720</th>\n",
-       "      <td>현대건설</td>\n",
-       "      <td>코스피</td>\n",
-       "      <td>64102</td>\n",
-       "      <td>토목 건설업</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>111355765</td>\n",
-       "      <td>557273105000</td>\n",
-       "      <td>-17 %</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A006360</th>\n",
-       "      <td>GS건설</td>\n",
-       "      <td>코스피</td>\n",
-       "      <td>64101</td>\n",
-       "      <td>건물 건설업</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>79924368</td>\n",
-       "      <td>399621840000</td>\n",
-       "      <td>-37 %</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A009540</th>\n",
-       "      <td>한국조선해양</td>\n",
-       "      <td>코스피</td>\n",
-       "      <td>33101</td>\n",
-       "      <td>선박 및 보트 건조업</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>70773116</td>\n",
-       "      <td>353865580000</td>\n",
-       "      <td>0 %</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A010060</th>\n",
-       "      <td>OCI</td>\n",
-       "      <td>코스피</td>\n",
-       "      <td>32001</td>\n",
-       "      <td>기초 화학물질 제조업</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>23849371</td>\n",
-       "      <td>127246855000</td>\n",
-       "      <td>-30 %</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A006800</th>\n",
-       "      <td>미래에셋대우</td>\n",
-       "      <td>코스피</td>\n",
-       "      <td>116601</td>\n",
-       "      <td>금융 지원 서비스업</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>658316408</td>\n",
-       "      <td>4101960790000</td>\n",
-       "      <td>2 %</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A016360</th>\n",
-       "      <td>삼성증권</td>\n",
-       "      <td>코스피</td>\n",
-       "      <td>116601</td>\n",
-       "      <td>금융 지원 서비스업</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>89300000</td>\n",
-       "      <td>458478080000</td>\n",
-       "      <td>20 %</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A010140</th>\n",
-       "      <td>삼성중공업</td>\n",
-       "      <td>코스피</td>\n",
-       "      <td>33101</td>\n",
-       "      <td>선박 및 보트 건조업</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>630000000</td>\n",
-       "      <td>3150574225000</td>\n",
-       "      <td>9 %</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A039490</th>\n",
-       "      <td>키움증권</td>\n",
-       "      <td>코스피</td>\n",
-       "      <td>116601</td>\n",
-       "      <td>금융 지원 서비스업</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>22099740</td>\n",
-       "      <td>110498700000</td>\n",
-       "      <td>-10 %</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A051910</th>\n",
-       "      <td>LG화학</td>\n",
-       "      <td>코스피</td>\n",
-       "      <td>32001</td>\n",
-       "      <td>기초 화학물질 제조업</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>70592343</td>\n",
-       "      <td>391405715000</td>\n",
-       "      <td>-1 %</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            기업명   구분    업종코드           업종  액면가(원)   상장주식수(주)         자본금(원)  \\\n",
-       "종목코드                                                                          \n",
-       "A001230  동국제강    코스피  32401   1차 철강 제조업    5000    95432737   589228035000    \n",
-       "A005490  포스코     코스피  32401   1차 철강 제조업    5000    87186835   482403125000    \n",
-       "A000720  현대건설    코스피  64102   토목 건설업       5000    111355765  557273105000    \n",
-       "A006360  GS건설    코스피  64101   건물 건설업       5000    79924368   399621840000    \n",
-       "A009540  한국조선해양  코스피  33101   선박 및 보트 건조업  5000    70773116   353865580000    \n",
-       "A010060  OCI     코스피  32001   기초 화학물질 제조업  5000    23849371   127246855000    \n",
-       "A006800  미래에셋대우  코스피  116601  금융 지원 서비스업   5000    658316408  4101960790000   \n",
-       "A016360  삼성증권    코스피  116601  금융 지원 서비스업   5000    89300000   458478080000    \n",
-       "A010140  삼성중공업   코스피  33101   선박 및 보트 건조업  5000    630000000  3150574225000   \n",
-       "A039490  키움증권    코스피  116601  금융 지원 서비스업   5000    22099740   110498700000    \n",
-       "A051910  LG화학    코스피  32001   기초 화학물질 제조업  5000    70592343   391405715000    \n",
-       "\n",
-       "        profit  \n",
-       "종목코드            \n",
-       "A001230  -16 %  \n",
-       "A005490  -12 %  \n",
-       "A000720  -17 %  \n",
-       "A006360  -37 %  \n",
-       "A009540  0 %    \n",
-       "A010060  -30 %  \n",
-       "A006800  2 %    \n",
-       "A016360  20 %   \n",
-       "A010140  9 %    \n",
-       "A039490  -10 %  \n",
-       "A051910  -1 %   "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_earning_rate(my_portfolio_code_list)"
+    "# %load neo_quant.py\n",
+    "# %load neo_quant.py\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "# import requests\n",
+    "# import bs4\n",
+    "# import time\n",
+    "# import datetime\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# from dateutil import parser\n",
+    "# from matplotlib import font_manager, rc\n",
+    "# from IPython.display import HTML\n",
+    "# pd.set_option('display.max_colwidth', -1)\n",
+    "\n",
+    "rc('font', family='AppleGothic')\n",
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "# pd.options.display.max_rows = 60\n",
+    "# pd.set_option('display.max_columns', 500)\n",
+    "# pd.set_option('display.width', 1000)\n",
+    "%matplotlib inline\n",
+    "\n",
+    "my_portfolio = ['동국제강', '포스코','현대건설','GS건설','한국조선해양','OCI','미래에셋대우','삼성증권','삼성중공업','키움증권','LG화학']\n",
+    "my_portfolio_code_list = ['A001230','A005490','A000720','A006360','A009540','A010060','A006800','A016360','A010140','A039490','A051910']\n",
+    "\n",
+    "# default loading\n",
+    "# companies, prices, fs_df, fr_df, iv_df = load_all_data()\n",
+    "\n",
+    "def show_earning_rate(company_code_list, year_duration=1):\n",
+    "    return _show_earning_rate(company_code_list, companies, prices, year_duration)\n",
+    "\n",
+    "def show_chart(company_name, year_duration=1):\n",
+    "    _show_chart(company_name, companies, prices, year_duration)\n",
+    "\n",
+    "# str 이나 list 를 전달한다.\n",
+    "def get_company_code_list(company_name_list):\n",
+    "    return _get_company_code_list(company_name_list, companies)\n",
+    "\n",
+    "def show_business_trend(year_duration=1):\n",
+    "    _show_business_trend(companies, prices, year_duration)\n",
+    "    \n",
+    "def show_earning_rate_by_name(firm_name, year_duration=1):\n",
+    "    return _show_earning_rate_by_name(firm_name, companies, prices, year_duration)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies, prices, fs_df, fr_df, iv_df = load_all_data()"
    ]
   }
  ],
