--- a/neo_quant_test6.ipynb
+++ b/neo_quant_test6.ipynb
@@ -11,7 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies, prices, fs_df, fr_df, iv_df = load_all_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,9 +153,6 @@
     "def get_price_over_list(company_df, price):\n",
     "    return company_df[company_df['액면가(원)'] >= price]\n",
     "\n",
-    "def get_company_code(name, company_df):\n",
-    "    return company_df[company_df['기업명']==name].index[0]\n",
-    "\n",
     "# str 이나 list 를 전달한다.\n",
     "def _get_company_code_list(company_name_list, company_df):\n",
     "    code_list = []\n",
@@ -158,28 +164,35 @@
     "                code_list.append({'code':company_df.index[num], 'name':name})\n",
     "    return code_list\n",
     "\n",
-    "def get_company_name(company_code, company_df):\n",
+    "def _get_company_code(name, company_df):\n",
+    "    return company_df[company_df['기업명']==name].index[0]\n",
+    "\n",
+    "def _get_company_name(company_code, company_df):\n",
     "    return company_df.loc[company_code]['기업명']\n",
     "\n",
-    "# company_name 은 list 형태로 전달\n",
-    "def _show_chart(company_name, company_df, price_df, year_duration=1):\n",
+    "def _show_chart(company_code, company_df, price_df, year_duration=1, name=None):\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
+    "    strategy_price = price_df[company_code][start_date:end_date]\n",
+    "    strategy_df = pd.DataFrame({'price':strategy_price})\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    if name == None:\n",
+    "        name = company_code\n",
+    "    strategy_df['price'].plot(label=name)\n",
+    "    plt.legend()\n",
+    "    plt.show() \n",
+    "    \n",
+    "def _show_chart_by_name(company_name, company_df, price_df, year_duration=1):\n",
     "    company_list = _get_company_code_list(company_name, company_df)\n",
     "    if len(company_list) == 0:\n",
     "        print('no company with name' + company_name)\n",
     "        return\n",
     "    code = company_list[0]['code']\n",
     "    name = company_list[0]['name']\n",
-    "#     code = code.replace('A','')\n",
-    "    strategy_price = price_df[code][start_date:end_date]\n",
-    "    strategy_df = pd.DataFrame({'price':strategy_price})\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    strategy_df['price'].plot(label=name)\n",
-    "    plt.legend()\n",
-    "    plt.show()          \n",
+    "    _show_chart(code, company_df, price_df, year_duration, name) \n",
+    "    \n",
     "\n",
-    "def show_multi_chart(company_code_list, price_df, company_df, year_duration=1):\n",
+    "def _show_multi_chart(company_code_list, price_df, company_df, year_duration=1):\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
     "    strategy_price = price_df[company_code_list][start_date:end_date]\n",
@@ -187,25 +200,19 @@
     "    plt.figure(figsize=(10, num_row*5))\n",
     "    for i, code in enumerate(company_code_list):\n",
     "        ax = plt.subplot(num_row, 4, i+1)\n",
-    "        name = get_company_name(code, company_df)\n",
+    "        name = _get_company_name(code, company_df)\n",
     "        ax.title.set_text(name)\n",
     "        ax.plot(strategy_price.index, strategy_price[code])\n",
     "    plt.show()\n",
-    "    \n",
-    "# company_name 은 list 형태로 전달    \n",
-    "def show_detail_chart(company_name, company_df, price_df, year_duration=1):\n",
+    "       \n",
+    "\n",
+    "\n",
+    "def _show_detail_chart(company_code, company_df, price_df, year_duration=1, name=None):\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
-    "    company_list = get_company_code_list(company_name, company_df)\n",
-    "    if len(company_list) == 0:\n",
-    "        print('no company with name' + company_name)\n",
-    "        return\n",
-    "    code = company_list[0]['code']\n",
-    "    name = company_list[0]['name']\n",
-    "#     code = code.replace('A','')\n",
-    "    strategy_price = price_df[code][start_date:end_date]\n",
+    "    strategy_price = price_df[company_code][start_date:end_date]\n",
     "    strategy_df = pd.DataFrame({'price':strategy_price})\n",
-    "    strategy_df\n",
+    "#     strategy_df\n",
     "    ma5 = strategy_df['price'].rolling(window=5).mean()\n",
     "    strategy_df['ma5'] = ma5\n",
     "    ma10 = strategy_df['price'].rolling(window=10).mean()\n",
@@ -218,6 +225,8 @@
     "    strategy_df['ma120'] = ma120\n",
     "    plt.figure(figsize=(20, 12))\n",
     "    # strategy_df['price'].plot(label=name)\n",
+    "    if name == None:\n",
+    "        name = company_code\n",
     "    plt.plot(strategy_df.index, strategy_df['price'], color='darkblue',linewidth=3.0)\n",
     "    plt.plot(strategy_df.index, strategy_df['ma5'], color='red', label='ma5')\n",
     "    plt.plot(strategy_df.index, strategy_df['ma10'], color='blue', label='ma10')\n",
@@ -231,38 +240,53 @@
     "    plt.grid()\n",
     "    plt.show() \n",
     "    \n",
+    "\n",
+    "\n",
+    "def _show_detail_chart_by_name(company_name, company_df, price_df, year_duration=1):\n",
+    "    company_list = _get_company_code_list(company_name, company_df)\n",
+    "    if len(company_list) == 0:\n",
+    "        print('no company with name' + company_name)\n",
+    "        return\n",
+    "    code = company_list[0]['code']\n",
+    "    name = company_list[0]['name']\n",
+    "    _show_detail_chart(code, company_df, price_df, year_duration, name)    \n",
     "    \n",
-    "def get_maximum_earning_rate(price_df, company_df, year_duration=1, min_price=0, type='all'):\n",
+    "    \n",
+    "def _get_maximum_earning_rate(price_df, company_df, year_duration=1, min_price=0, min_profit=0, type='all'):\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
+    "    \n",
     "    strategy_price = price_df[start_date:end_date]\n",
     "    strategy_price = strategy_price.fillna(method='bfill')\n",
+    "    \n",
     "    last_price = strategy_price.iloc[-1]\n",
     "    first_price = strategy_price.iloc[0]\n",
+    "    \n",
     "    price_diff_df = pd.DataFrame({first_price.name:first_price, last_price.name:last_price})\n",
-    "#     price_diff_df.index = 'A' + price_diff_df.index\n",
+    "    price_diff_df = price_diff_df[price_diff_df[last_price.name] > min_price]\n",
+    "    \n",
     "    price_diff_df['diff'] = price_diff_df[last_price.name] - price_diff_df[first_price.name]\n",
-    "    price_diff_df = price_diff_df[price_diff_df[last_price.name] > 5000]\n",
-    "    price_diff_df = price_diff_df[price_diff_df['diff'] > 0]\n",
+    "#     price_diff_df = price_diff_df[price_diff_df['diff'] > 0]\n",
+    "    \n",
     "    # price_diff_df['ratio'] = price_diff_df['diff'] / price_diff_df[first_price.name]\n",
     "    price_diff_df['ratio'] = ((price_diff_df[last_price.name] / price_diff_df[first_price.name]) - 1) * 100\n",
     "    price_diff_df['ratio'] = price_diff_df['ratio'].astype(int)\n",
+    "    \n",
+    "    price_diff_df = price_diff_df[price_diff_df['ratio'] > min_profit]\n",
+    "    \n",
     "    price_diff_df = price_diff_df.sort_values(by='ratio', ascending=False)\n",
+    "    \n",
     "    price_diff_df = add_company_info(price_diff_df, company_df)\n",
+    "    \n",
     "    if type == 'kospi':\n",
     "        price_diff_df = get_kospi_list(price_diff_df)\n",
     "    elif type == 'kosdaq':\n",
     "        price_diff_df = get_kosdaq_list(price_diff_df)\n",
+    "        \n",
     "    return price_diff_df\n",
-    "#     price_diff_df['fs_info'] = price_diff_df.index\n",
-    "#     price_diff_df['fs_info'] = price_diff_df['fs_info'].apply(lambda x: '<a href=\"https://comp.fnguide.com/SVO2/asp/SVD_Finance.asp?pGB=1&cID=&MenuYn=Y&ReportGB=D&NewMenuID=103&stkGb=701&gicode={0}\" target=\"_blank\">fs</a>'.format(x))\n",
-    "#     price_diff_df['fr_info'] = price_diff_df.index\n",
-    "#     price_diff_df['fr_info'] = price_diff_df['fr_info'].apply(lambda x: '<a href=\"https://comp.fnguide.com/SVO2/asp/SVD_FinanceRatio.asp?pGB=1&cID=&MenuYn=Y&ReportGB=D&NewMenuID=104&stkGb=701&gicode={0}\" target=\"_blank\">fr</a>'.format(x))\n",
-    "#     price_diff_df['iv_info'] = price_diff_df.index\n",
-    "#     price_diff_df['iv_info'] = price_diff_df['iv_info'].apply(lambda x: '<a href=\"https://comp.fnguide.com/SVO2/asp/SVD_Invest.asp?pGB=1&cID=&MenuYn=Y&ReportGB=D&NewMenuID=105&stkGb=701&gicode={0}\" target=\"_blank\">iv</a>'.format(x))\n",
-    "#     return HTML(price_diff_df.to_html(escape=False))\n",
     "\n",
-    "def show_pf_earning_rate(code_list, price_df, year_duration=1, initial_monehy=100000000):\n",
+    "\n",
+    "def _show_earning_chart(code_list, price_df, year_duration=1, initial_money=100000000):\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
     "    st_backtest = backtest_with_code_list(price_df, code_list, start_date, end_date, initial_money)\n",
@@ -270,7 +294,7 @@
     "    st_backtest['총변화율'].plot()\n",
     "    plt.show()\n",
     "    \n",
-    "def show_company_info(company_code_list, company_df):\n",
+    "def _show_company_info(company_code_list, company_df):\n",
     "    firm_df = company_df.loc[company_code_list]\n",
     "    firm_df['fs_info'] = firm_df.index\n",
     "    firm_df['fs_info'] = firm_df['fs_info'].apply(lambda x: '<a href=\"https://comp.fnguide.com/SVO2/asp/SVD_Finance.asp?pGB=1&cID=&MenuYn=Y&ReportGB=D&NewMenuID=103&stkGb=701&gicode={0}\" target=\"_blank\">fs</a>'.format(x))\n",
@@ -280,8 +304,8 @@
     "    firm_df['iv_info'] = firm_df['iv_info'].apply(lambda x: '<a href=\"https://comp.fnguide.com/SVO2/asp/SVD_Invest.asp?pGB=1&cID=&MenuYn=Y&ReportGB=D&NewMenuID=105&stkGb=701&gicode={0}\" target=\"_blank\">iv</a>'.format(x))\n",
     "    return HTML(firm_df.to_html(escape=False))\n",
     "    \n",
-    "def show_company_info_from_name(firm_name, company_df):\n",
-    "    company_list = get_company_code_list(firm_name, company_df)\n",
+    "def _show_company_info_by_name(firm_name, company_df):\n",
+    "    company_list = _get_company_code_list(firm_name, company_df)\n",
     "    if len(company_list) == 0:\n",
     "        print('no company with name' + company_name)\n",
     "        return\n",
@@ -289,7 +313,7 @@
     "    code_list = []\n",
     "    for company in company_list:\n",
     "        code_list.append(company['code'])\n",
-    "    return show_company_info(code_list, companies)\n",
+    "    return _show_company_info(code_list, companies)\n",
     "\n",
     "def _show_earning_rate(company_code_list, company_df, price_df, year_duration=1):\n",
     "    company_selected = companies.loc[company_code_list]\n",
@@ -785,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,35 +840,81 @@
     "# default loading\n",
     "# companies, prices, fs_df, fr_df, iv_df = load_all_data()\n",
     "\n",
-    "def show_earning_rate(company_code_list, year_duration=1):\n",
-    "    return _show_earning_rate(company_code_list, companies, prices, year_duration)\n",
+    "########################## Basic API ################################\n",
     "\n",
-    "def show_chart(company_name, year_duration=1):\n",
-    "    _show_chart(company_name, companies, prices, year_duration)\n",
+    "def get_company_name(company_code):    \n",
+    "    return _get_company_name(company_code, companies)\n",
+    "    \n",
+    "def get_company_code(company_name):\n",
+    "    return _get_company_code(company_name, companies)\n",
     "\n",
     "# str 이나 list 를 전달한다.\n",
     "def get_company_code_list(company_name_list):\n",
     "    return _get_company_code_list(company_name_list, companies)\n",
     "\n",
-    "def show_business_trend(year_duration=1):\n",
-    "    _show_business_trend(companies, prices, year_duration)\n",
+    "\n",
+    "########################## API ################################\n",
+    "\n",
+    "def show_earning_rate(company_code_list, year_duration=1):\n",
+    "    return _show_earning_rate(company_code_list, companies, prices, year_duration)\n",
+    "\n",
+    "def show_chart_by_name(company_name, year_duration=1):\n",
+    "    _show_chart_by_name(company_name, companies, prices, year_duration)\n",
+    "\n",
+    "def show_chart(company_code, year_duration=1):\n",
+    "    _show_chart(company_code, companies, prices, year_duration)\n",
+    "\n",
+    "def show_detail_chart_by_name(company_name, year_duration=1):\n",
+    "    _show_detail_chart_by_name(company_name, companies, prices, year_duration)\n",
+    "    \n",
+    "def show_multi_chart(company_code_list, year_duration=1):\n",
+    "    _show_multi_chart(company_code_list, prices, companies, year_duration)\n",
     "    \n",
     "def show_earning_rate_by_name(firm_name, year_duration=1):\n",
     "    return _show_earning_rate_by_name(firm_name, companies, prices, year_duration)\n",
+    "\n",
+    "def show_earning_chart(code_list, year_duration=1, initial_money=100000000):\n",
+    "    _show_earning_chart(code_list, prices, year_duration, initial_money)\n",
+    "\n",
+    "def show_company_info(company_code_list):\n",
+    "    return _show_company_info(company_code_list, companies)\n",
+    "    \n",
+    "def show_company_info_by_name(firm_name):\n",
+    "    return _show_company_info_by_name(firm_name, companies)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "########################## Strategy API ################################\n",
+    "    \n",
+    "def show_business_trend(year_duration=1):\n",
+    "    _show_business_trend(companies, prices, year_duration)\n",
+    "    \n",
+    "# get_maximum_earning_rate(5, 5000, 100, 'kospi')    \n",
+    "def get_maximum_earning_rate(year_duration=1, min_price=0, min_profit=0, type='all'):\n",
+    "    return _get_maximum_earning_rate(prices, companies, year_duration, min_price, min_profit, type)\n",
     "    \n",
     "    \n",
     "    \n",
     "    \n",
     "    \n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -855,11 +925,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
-    "companies, prices, fs_df, fr_df, iv_df = load_all_data()"
+    "max = get_maximum_earning_rate(3, 10000, 50, 'kospi')"
    ]
   }
  ],
