--- a/neo_quant_test6.ipynb
+++ b/neo_quant_test6.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,10 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# %load neo_quant_backbone.py\n",
+    "# %load neo_quant_backbone.py\n",
     "# %load neo_quant_backbone.py\n",
     "# !open .\n",
     "# %load neo_quant.py\n",
@@ -150,8 +152,10 @@
     "def get_kosdaq_list(company_df):\n",
     "    return company_df[company_df['구분']=='코스닥']\n",
     "\n",
-    "def get_price_over_list(company_df, price):\n",
-    "    return company_df[company_df['액면가(원)'] >= price]\n",
+    "def _get_price_over_list(company_code_list, price_df, min_price = 0):\n",
+    "    temp_df = pd.DataFrame({'price':price_df[company_code_list].iloc[-1]})\n",
+    "    temp_df = temp_df[temp_df['price'] > min_price]\n",
+    "    return temp_df.index\n",
     "\n",
     "# str 이나 list 를 전달한다.\n",
     "def _get_company_code_list(company_name_list, company_df):\n",
@@ -643,7 +647,8 @@
     "        code_list.append(code)\n",
     "\n",
     "    strategy_price = price_df[code_list][start_date:end_date]\n",
-    "\n",
+    "    strategy_price = strategy_price.fillna(method='bfill')\n",
+    "    \n",
     "    pf_stock_num = {}\n",
     "    stock_amount = 0\n",
     "    stock_pf = 0\n",
@@ -672,7 +677,8 @@
     "        code_list.append(code)\n",
     "\n",
     "    strategy_price = price_df[code_list][start_date:end_date]\n",
-    "\n",
+    "    strategy_price = strategy_price.fillna(method='bfill')\n",
+    "    \n",
     "    pf_stock_num = {}\n",
     "    stock_amount = 0\n",
     "    stock_pf = 0\n",
@@ -717,7 +723,7 @@
     "\n",
     "# [코드 5.32] 리밸런싱 백테스트 함수화 (Ch5. 백테스트.ipynb)\n",
     "\n",
-    "def backtest_re(strategy, start_date, end_date, initial_money, price_df, fr_df, fs_df, num, value_type=None, value_list=None, date_range=None):\n",
+    "def backtest_re(strategy, start_date, end_date, initial_money, price_df, fr_df, fs_df, invest_df, num, value_type=None, value_list=None, date_range=None):\n",
     "    \n",
     "    start_year = int(start_date.split('-')[0])\n",
     "    end_year = int(end_date.split('-')[0])\n",
@@ -809,10 +815,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# %load neo_quant.py\n",
     "# %load neo_quant.py\n",
     "# %load neo_quant.py\n",
     "import pandas as pd\n",
@@ -882,7 +889,8 @@
     "def show_company_info_by_name(firm_name):\n",
     "    return _show_company_info_by_name(firm_name, companies)\n",
     "    \n",
-    "    \n",
+    "def get_price_over_list(company_code_list, min_price = 0):\n",
+    "    return _get_price_over_list(company_code_list, prices, min_price)    \n",
     "    \n",
     "########################## Strategy API ################################\n",
     "    \n",
@@ -925,11 +933,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
-    "max = get_maximum_earning_rate(3, 10000, 50, 'kospi')"
+    "temp_df = low_per(iv_df, '2015/12', 20)\n",
+    "temp_df = high_roa(fr_df, '2015/12', 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = get_price_over_list(temp_df.index, 500)"
    ]
   }
  ],
