--- a/neo_quant_test6.ipynb
+++ b/neo_quant_test6.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,11 +943,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "temp = get_price_over_list(temp_df.index, 500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_df = get_value_rank(iv_df, 'PBR', '2016/12', 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['A064520', 'A073010', 'A101000', 'A016610', 'A000950', 'A001470',\n",
+       "       'A003300', 'A019010', 'A001530', 'A011160', 'A005010', 'A003480',\n",
+       "       'A009200', 'A058650', 'A001940', 'A082740', 'A101930', 'A002300',\n",
+       "       'A004690'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_value_rank(invest_df, value_type, index_date, num):\n",
+    "    invest_df[(index_date,  value_type)] = pd.to_numeric(invest_df[(index_date,  value_type)])\n",
+    "    value_sorted = invest_df.sort_values(by=(index_date,  value_type))[index_date]\n",
+    "    value_sorted[  value_type + '순위'] = value_sorted[value_type].rank()\n",
+    "    return value_sorted[[value_type, value_type + '순위']][:num]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_value_combo(value_list, invest_df, index_date, num):\n",
+    "    \n",
+    "    for i, value in enumerate(value_list):\n",
+    "        temp_df = get_value_rank(invest_df, value, index_date, None)\n",
+    "        if i == 0:\n",
+    "            value_combo_df = temp_df\n",
+    "            rank_combo = temp_df[value + '순위']\n",
+    "        else:\n",
+    "            value_combo_df = pd.merge(value_combo_df, temp_df, how='outer', left_index=True, right_index=True)\n",
+    "            rank_combo = rank_combo + temp_df[value + '순위']\n",
+    "    \n",
+    "    value_combo_df['종합순위'] = rank_combo.rank()\n",
+    "    value_combo_df = value_combo_df.sort_values(by='종합순위')\n",
+    "    \n",
+    "    return value_combo_df[:num]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_value_quality(invest_df, fs_df, index_date, num):\n",
+    "    value = make_value_combo(['PER', 'PBR', 'PSR', 'PCR'], invest_df, index_date, None)\n",
+    "    quality = get_fscore(fs_df, index_date, None)\n",
+    "    value_quality = pd.merge(value, quality, how='outer', left_index=True, right_index=True)\n",
+    "    value_quality_filtered = value_quality[value_quality['종합점수'] == 3]\n",
+    "    vq_df = value_quality_filtered.sort_values(by='종합순위')\n",
+    "    return vq_df[:num]\n"
    ]
   }
  ],
