--- a/neo_quant_test6.ipynb
+++ b/neo_quant_test6.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,6 +1034,33 @@
     "    value_quality_filtered = value_quality[value_quality['종합점수'] == 3]\n",
     "    vq_df = value_quality_filtered.sort_values(by='종합순위')\n",
     "    return vq_df[:num]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1,  2])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([-1, 2])"
    ]
   }
  ],
